src/provider-info/provider-info.module.css
@import '../common/variables.css';

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.maxWidthContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  line-height: 1.5;
}

.providerOverview {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
  /* margin: var(--s-7) var(--s-0) var(--s-0) var(--s-0); */
}

.providerOverviewBack {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  flex-wrap: wrap;
  width: 80%;
  margin: var(--s-7) var(--s-0) var(--s-0) var(--s-0);
}

.basicInfo {
  display: flex;
  /* flex-direction: column; */
  align-items: center;
  justify-content: center;
  margin: var(--s-0) var(--s-4) var(--s-4) var(--s-0);
}

.providerPhoto {
  width: 100px;
  height: 100px;
  background-size: 100%;
  border-radius: 50%;
  margin-right: var(--s-3);
  object-fit: cover;
}

.name {
  font-size: var(--fs-5);
  font-weight: var(--fw-5);
}

.acceptingClientsTag {
  border-radius: 5px;
  border: 2px solid var(--primary);
  text-align: center;
  color: var(--primary);
  padding: var(--s-2);
  margin-top: var(--s-2);
  width: 200px;
}

.hideAcceptingClientsTag {
  display: none;
}

.contactInfo {
  text-align: right;
}

.websiteLink {
  color: var(--primary);
}

.sectionsContainer {
  width: 80%;
}

.sectionContainer {
  margin: var(--s-7) var(--s-0) var(--s-7) var(--s-0);
  width: 100%;
}

.sectionHeader {
  font-size: var(--fs-4);
  font-weight: var(--fw-5);
  margin-bottom: var(--s-0);
}

.sectionDescription {
  font-size: var(--fs-2);
  font-style: italic;
  margin: var(--s-0) var(--s-0) var(--s-4) var(--s-0);
}

.sectionContent {
  display: flex;
  justify-content: space-around;
}

.sectionContentOneItem {
  display: flex;
  justify-content: flex-start;
  margin-left: var(--s-9);
}

.footer {
  position: sticky;
  display: flex;
  bottom: 0;
  justify-content: space-between;
  align-items: center;
  background-color: var(--white);
  box-shadow: var(--bs-4);
  width: 100%;
  height: 80px;
  padding: var(--s-0) var(--s-10) var(--s-0) var(--s-10);
}

.leftSideActions {
  display: flex;
}

.favorite {
  color: var(--primary);
}

.favorite:hover {
  cursor: pointer;
}

.directionsLink {
  color: var(--primary);
}

.backButton {
  display: flex;
  position: absolute;
  bottom: 150px;
  color: var(--primary);
}

@media (max-width: 768px) {
  .name {
    font-size: var(--fs-4);
  }

  .contactInfo {
    text-align: left;
    margin-top: var(--s-5);
  }

  .footer {
    justify-content: space-between;
    padding: var(--s-0) var(--s-5) var(--s-0) var(--s-5);
  }
}

